--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fundamental-web",
+  "name": "covid19-update",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,12 +7,14 @@
     "build": "webpack --config webpack.prod.js",
     "start-dev": "webpack-dev-server --config webpack.dev.js --open"
   },
-  "author": "chandrakomara.ck@gmail.com",
+  "author": "nobody",
   "license": "ISC",
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.14.0",
+    "bootstrap": "^4.5.2",
     "jquery": "^3.5.1",
     "moment": "^2.27.0",
+    "popper.js": "^1.16.1",
     "regenerator-runtime": "^0.13.7"
   },
   "devDependencies": {
